Fix text spacing

--- a/style.scss
+++ b/style.scss
@@ -44,7 +44,8 @@ h1, h2, p {
 }
 
 p {
-  line-height: 1.2em;
+  line-height: 1.5em;
+  margin: 0;
 }
 
 a {
@@ -86,8 +87,8 @@ main {
 }
 
 .subtitle {
+  margin-top: 0.2em;
   margin-bottom: 2em;
-  line-height: 1em;
 }
 
 .icon-row {
@@ -151,6 +152,7 @@ button {
     width: 100vw;
     top: -28vh;
   }
+
   .main-background {
     width: 65%;
     transform: skewX(-4deg);
@@ -174,9 +176,6 @@ button {
   main {
     top: 200px;
     margin: 0 25px;
-  }
-  .subtitle {
-    line-height: 1em;
   }
 }
 @media (max-width: 550px) {
